--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,103 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: #242424;
+    color: #fff;
+}
+
+.container {
+    width: 1393px;
+}
+
+.header {
+    margin-top: 100px;
+    margin-left: 150px;
+}
+
+.title {
+    font-family: Poppins;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 48px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+}
+
+.text {
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: left;
+    color: rgba(127, 127, 127, 1);
+}
+
+.forms {
+    display: flex;
+    gap: 100px;
+    margin-top: 20px;
+}
+
+.form {
+    flex-direction: column;
+    display: flex;
+    gap: 30px;
+    font-weight: bolder;
+    font-size: xx-large;
+
+    input {
+        width: 800px;
+        height: 48px;
+        border-radius: 10px;
+        border: 2px solid #3d3d3d;
+        background-color: #242424;
+        padding-left: 20px;
+        color: #fff;
+    }
+}
+
+.checkbox {
+    display: flex;
+    gap: 12px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.icon1 {
+    width: 20px;
+    height: 20px;
+}
+
+.code {
+    font-size: 18px;
+    font-weight: 400;
+    color: #7f7f7f;
+}
+
+.btn {
+    margin-bottom: 50px;
+    background-color: #4b72c2;
+    color: #fff;
+    width: 200px;
+    height: 48px;
+    border-radius: 4px;
+    border: none;
+}
+
+.footer {
+    display: flex;
+    gap: 7px;
+    margin-bottom: 22px;
+}
+
+.last-text {
+    font-size: 18px;
+    color: #7f7f7f;
+}
+
+a {
+    text-decoration: none;
+    color:#4b72c2 ;
+}
